--- a/lib/models/Schema/Media.yaml
+++ b/lib/models/Schema/Media.yaml
@@ -2,7 +2,7 @@
 # ==============================================
 # BAL MEDIA
 
-BalMedia:
+Bal_Media:
     actAs:
         Sluggable:
             name: code
