--- a/lib/models/Schema/User.yaml
+++ b/lib/models/Schema/User.yaml
@@ -2,7 +2,7 @@
 # ==============================================
 # BAL USER
 
-BalUser:
+Bal_User:
     actAs:
         Taggable:
             tagAlias: "SubscriptionTags"
@@ -123,7 +123,7 @@ BalUser:
 # ==============================================
 # BAL PERMISSIONS
 
-BalRole:
+Bal_Role:
     columns:
         id:
             type: integer(2)
@@ -148,7 +148,7 @@ BalRole:
             foreignAlias: Roles
             refClass: PermissionAndRole
 
-BalPermissionAndRole:
+Bal_PermissionAndRole:
     columns:
         id:
             type: integer(2)
@@ -171,7 +171,7 @@ BalPermissionAndRole:
             local: permission_id
             foreign: id
         
-BalPermission:
+Bal_Permission:
     columns:
         id:
             type: integer(2)
@@ -183,7 +183,7 @@ BalPermission:
             notblank: true
             unique: true
 
-BalRoleAndUser:
+Bal_RoleAndUser:
     columns:
         id:
             type: integer(2)
@@ -217,7 +217,7 @@ BalRoleAndUser:
             local: role_id
             foreign: id
 
-BalPermissionAndUser:
+Bal_PermissionAndUser:
     columns:
         id:
             type: integer(3)
