* Preparation for generic of balcms models

--- a/lib/models/Schema/Route.yaml
+++ b/lib/models/Schema/Route.yaml
@@ -2,7 +2,7 @@
 # ==============================================
 # BAL ROUTE
 
-Balcms_Route:
+Bal_Route:
     actAs:
         SoftDelete:
         Searchable:
