--- a/lib/models/Schema/File.yaml
+++ b/lib/models/Schema/File.yaml
@@ -2,7 +2,7 @@
 # ==============================================
 # BAL MEDIA
 
-Bal_Media:
+Bal_File:
     actAs:
         Sluggable:
             name: code
