* Added paypal as a standard field for users

--- a/lib/models/Schema/User.yaml
+++ b/lib/models/Schema/User.yaml
@@ -43,6 +43,8 @@ Bal_User:
                 auto: true
         website:
             type: string(255)
+        paypal:
+            type: string(255)
             
         email:
             type: string(255)
