--- a/lib/models/Schema/Message.yaml
+++ b/lib/models/Schema/Message.yaml
@@ -50,7 +50,7 @@ Bal_Message:
             default: "user_message"
             extra:
                 auto: true
-        MessageReplyTo_id:
+        ReplyTo_id:
             type: integer(3)
             unsigned: true
         UserFor_id:
@@ -60,11 +60,11 @@ Bal_Message:
             type: integer(2)
             unsigned: true
     relations:
-        MessageReplyTo:
+        ReplyTo_id:
             class: Message
-            local: MessageReplyTo_id
+            local: ReplyTo_id
             foreign: id
-            foreignAlias: MessagesResponseTo
+            foreignAlias: Replies
         UserFor:
             class: User
             local: UserFor_id
